# AlphaClinic

./: .env  .env.example  API_DOCUMENTATION.md  INSTALL.md  PERMISSION_SYSTEM.md  README.md  SYSTEM_ANALYSIS_SUMMARY.md  TUTORIALS.md  USER_GUIDE.md  advanced_reporting.py  analytics_service.py  app.py  audit_service.py  blockchain_service.py  cache_service.py  compliance_service.py  config.py  email_service.py  encryption_service.py  lgpd_service.py  migrate_to_postgres.py  mkdocs.yml  ml_service.py  models.py  permission_service.py  pyproject.toml  requirements.txt  setup.py  tailwind.config.js  temp_login.html  test_encryption.py  test_network.py
attached_assets/: Alphaclin_QMS_Spec_Expandida_1758833252505.docx  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-p-1758835019800_1758835019803.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-p-1758835366076_1758835366077.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-p-1758835446979_1758835446980.txt  Pasted-Traceback-most-recent-call-last-File-home-runner-workspace-pythonlibs-lib-python3-11-site-p-1758884218175_1758884218178.txt
blueprints/: admin.py  analytics.py  api.py  audits.py  auth.py  compliance.py  docs.py  documents.py  integrations.py  main.py  nonconformities.py  norms.py  operational.py  processes.py  reports.py  teams.py  users.py
docs/: index.md
instance/: alphaclin_qms.db
templates/: auth_base.html  base.html  dashboard.html  status.html
(+106 files in other folders)
